fixing track markings overlapping the legend

--- a/src/components/Track/Legend.module.scss
+++ b/src/components/Track/Legend.module.scss
@@ -3,7 +3,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: -1;
   pointer-events: none;
   text-align: left;
 
